--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.application'
 
-configurations.all {
-    resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-}
+
 
 android {
     compileSdkVersion 23
@@ -25,21 +23,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
     packagingOptions {
         exclude 'LICENSE.txt'
     }
 }
 
-
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':jokedisplay')
     compile project(path: ':backend', configuration: 'android-endpoints')
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
 
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+
+    freeCompile 'com.google.android.gms:play-services-ads:8.4.0'
 
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
